--- a/resources/sass/custom/_image-uploader.scss
+++ b/resources/sass/custom/_image-uploader.scss
@@ -78,3 +78,8 @@
         transform: translate(-50%, -50%);
     }
 }
+
+.image-capturer-front {
+    -webkit-transform: translate(-50%, -50%) scaleX(-1) !important;
+    transform: translate(-50%, -50%) scaleX(-1) !important;
+}
